    * agent_vsphere: New VMWare ESX monitoring that uses pySphere and the VMWare
      API in order to get data very efficiently. Read (upcoming) documentation
      for details.
    * windows_agent: Now buffers output before writing it to the socket
                     Results in less tcp packages per call

    Notifications:
    * notify.py: unique spoolfiles name no longer created with uuid

    Livestatus:
    * Table statehist: Improved detection of vanished hosts and services.
                       Now able to detect and remove nonsense check plugin output 
    * FIX: able to handle equal comment_id between host and service

    BI:
    * Integrated availability computing, including nifty time warp feature

    WATO:
    * Configuration of datasource programs via dedicated rules
    * New editor for Business Intelligence rules
    * Rule Editor: Now able to show infeffective rules
    * Valuespec: CascadingDropdown now able to process choice values from functions
    * cisco_qos parameters now configurable via WATO
    * Removed global option logwatch_forward_to_ec, moved this to the
      logwatch_ec ruleset. With this option the forwarding can now be enabled
      for each logfile on a host
    * Configuration of an alternativ host check command
    * Inventory: Display link symbol for ps ruleset

1.2.2b6:
    Core:
    * FIX: setup: detect check_icmp also on 64-Bit CentOS
           (thanks to あきら) 
    * FIX: setup.sh: create auth.serials, fix permissions of htpasswd

    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * FIX: check_mk-mssql_counters.locks: fix computation, was altogether wrong
    * FIX: check_mk-mssql_counters.transactions: fix computation also
    * check_http: now support the option -L (urlizing the result)
    * Added mem section to Mac OSX agent (Thanks to Brad Davis)