@@ -434,13 +434,23 @@ def should_notify(context, entry):
         if not servicedesc:
             notify_log(" - Proceed: limited to certain services, but this is a host notification")
         else:
+            # Example
+            # only_services = [ "!LOG foo", "LOG", BAR" ]
+            # -> notify all services beginning with LOG or BAR, but not "LOG foo..."
+            skip = True
             for s in entry["only_services"]:
+                if s.startswith("!"): # negate
+                    negate = True
+                    s = s[1:]
+                else:
+                    negate = False
                 if re.match(s, servicedesc):
+                    skip = negate
                     break
-            else:
+            if skip:
                 notify_log(" - Skipping: service '%s' matches non of %s" % (
                     servicedesc, ", ".join(entry["only_services"])))
-                return False
+                continue
 
     # Check notification type
     event, allowed_events = check_notification_type(context, entry["host_events"], entry["service_events"])
